[tool.poetry]
name = "music-genre"
version = "0.1.0"
description = "Music Genre application using machine learning AI for various applications"
authors = ["Akshat Pande <akshat.pande@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
